fix visible home page

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -54,7 +54,6 @@
         justify-content: center;
         align-items: center;
         position: relative;
-        z-index: 1;
         transition: all .4s ease-out;
 
         &:before {
