--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   padding-right: 15px;
   padding-left: 265px;
-
+  position: absolute;
   .titleBlock {
     position: relative;
 
